#ifndef IFSTRUCTURE_H
#define IFSTRUCTURE_H

namespace AST {
    class IfStructure
    {
    public:
        IfStructure();
    };
}


#endif // IFSTRUCTURE_H
